feat: add group activities management
